[package]
name = "quickchecking"
description = "Bindgen property tests with quickcheck. Generate random valid C code and pass it to the csmith/predicate.py script"
version = "0.0.0"
publish = false
rust-version = "1.70"
edition = "2018"

[lib]
name = "quickchecking"
path = "src/lib.rs"

[[bin]]
name = "quickchecking"
path = "src/bin.rs"

[dependencies]
clap = "4"
quickcheck = "1.0"
tempfile = "3"

[features]
# No features by default.
default = []

# Enable the generation of code that allows for zero sized arrays as struct
# fields. Until issues #684 and #1153 are resolved this can result in failing tests.
zero-sized-arrays = []

# Enable the generation of code that allows for long double types as struct
# fields. Until issue #550 is resolved this can result in failing tests.
long-doubles = []
